# telecom-support-intelligence

./: .dockerignore  .dvcignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml
apps/api/: main.py
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
data/synthetic/: tickets.jsonl
docs/: architecture.md  data-card.md  evaluation.md  limitations.md  model-card.md  privacy.md  product-requirements.md  reviewer-guide.md
docs/adr/: 0001-modular-monolith.md  0002-grounded-refusal.md
knowledge_base/source/: dsl-troubleshooting.md  mobile-data.md  sim-security.md
reports/classification/: metrics.json  priority_metrics.json
reports/privacy/: metrics.json
reports/product_evaluation/: README.md
reports/rag/: metrics.json
reports/retrieval/: metrics.json
scripts/: __init__.py  dev.py  evaluate_system.py  generate_dataset.py  ingest_documents.py  seed_demo.py  train_classifier.py
src/telcoassist/: __init__.py  worker.py
src/telcoassist/analytics/: service.py
src/telcoassist/api/: app.py
src/telcoassist/classification/: service.py
tests/api/: test_api.py
tests/unit/: test_adapters.py  test_analytics_store.py  test_intelligence.py  test_redaction.py  test_retrieval_rag.py
(+13 files in other folders)
